Fix subComments